feat(缺陷管理): 补充缺陷管理变更日志历史及通知